[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyKOOH"
version = "0.4.0"
authors = [{ name = "Albert Kottke", email = "albert.kottke@gmail.com" }]
description = "Efficient implementatins of the Konno Ohmachi filter in Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "numba",
  "setuptools",
]

[project.urls]
Homepage = "https://github.com/arkottke/pykooh"

[project.optional-dependencies]
cython = [
"cython"
]

[tool.hatch.build.targets.sdist]
exclude = ["/*.yml", "/.*", "/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/pykooh"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
exclude = [
  "docs"
]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203"]

[tool.hatch.envs.test]
dependencies = [
    "cython",
  "coverage[toml]",
  "jupyter_client",
  "nbconvert",
  "nbformat",
  "pytest",
  "pytest-cov",
  "pytest-runner",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run-coverage-xml = "run-coverage --cov-report xml"
run = "run-coverage --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]
