[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs", "hatch-cython"]

[project]
name = "pyKOOH"
version = "0.4.0"
authors = [{ name = "Albert Kottke", email = "albert.kottke@gmail.com" }]
description = "Efficient implementatins of the Konno Ohmachi filter in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "numba",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/arkottke/pykooh"

[project.optional-dependencies]
cython = [
    "cython"
]

[tool.hatch.build.targets.sdist]
exclude = ["/*.yml", "/.*", "/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/pykooh"]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython", "numpy"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
compile_args = [
  "-v",
  "-O3"
]
# include numpy headers
include_numpy = true
files = {exclude = [ "*.py" ]}

[tool.hatch.version]
source = "vcs"

[tool.ruff]
exclude = [
    "docs"
]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203"]

[tool.hatch.envs.test]
dependencies = [
    "numba",
    "coverage[toml]",
    "jupyter_client",
    "nbconvert",
    "nbformat",
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.env-vars]
# Disable Numba during tests to get coverage report
NUMBA_DISABLE_JIT = "1"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run-coverage-xml = "run-coverage --cov-report xml"
run = "run-coverage --no-cov"
